added webdriverfactory and new SayHelloPage, test completed

--- a/samples/app/views/HtmlController/helloWorld.html
+++ b/samples/app/views/HtmlController/helloWorld.html
@@ -8,5 +8,5 @@
 		<span class="error">#{error 'name' /}</span>
 	</p>
 
-	<input type="submit" value="submit" />
+	<input id="submit" type="submit" value="submit" />
 #{/form}
