--- a/app/views/LitmusTestRunner/testList.html
+++ b/app/views/LitmusTestRunner/testList.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-    <title>Play! - Litmus Test Runner</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=${_response_encoding}"/>
-    <script src="@{'/public/test-runner/jquery-1.3.2.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
-    <script src="@{'/public/test-runner/jquery.scrollTo-min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
-    <style type="text/css">
+<title>Play! - Litmus Test Runner</title>
+<meta http-equiv="Content-Type" content="text/html; charset=${_response_encoding}"/>
+<script src="@{'/public/test-runner/jquery-1.3.2.min.js'}" type="text/javascript"
+        charset="${_response_encoding}"></script>
+<script src="@{'/public/test-runner/jquery.scrollTo-min.js'}" type="text/javascript"
+        charset="${_response_encoding}"></script>
+<style type="text/css">
 html, body {
     margin: 0;
     padding: 0;
@@ -13,29 +15,36 @@ html, body {
     background: #EEEEEE;
     -moz-user-select: none;
 }
+
 a {
     outline: none;
 }
+
 .block {
     padding: 20px;
     border-bottom: 1px solid #aaa;
 }
+
 #header {
     position: fixed;
     height: 60px;
     width: 100%;
 }
+
 #header h1 {
     font-weight: normal;
     font-size: 28px;
     margin: 0;
 }
+
 #header {
     background: #a4c4f3;
 }
+
 #header p {
     color: #333;
 }
+
 #results {
     background: #f6f6f6;
     position: fixed;
@@ -43,22 +52,27 @@ a {
     width: 100%;
     top: 100px;
 }
+
 label {
     font-weight: bold;
     display: block;
 }
+
 .field {
     margin-bottom: 15px;
 }
+
 small {
     color: #888;
     font-size: 80%;
     position: relative;
     top: -3px;
 }
+
 #tests {
     padding-top: 12em;
 }
+
 #tests h2 {
     color: #333;
     font-weight: normal;
@@ -66,18 +80,22 @@ small {
     padding-left: 5px;
     -moz-user-select: none;
 }
+
 #tests h2 span {
     cursor: pointer;
 }
+
 ul {
     list-style: none;
     margin-bottom: 40px;
     padding-left: 20px;
 }
+
 li {
     padding: 2px;
     margin-bottom: 4px;
 }
+
 .test a {
     background: #fafafa;
     padding: 3px 6px;
@@ -87,17 +105,21 @@ li {
     cursor: pointer;
     -moz-user-select: none;
 }
+
 .selected a {
     background: #fff2ab;
     color: #333;
 }
+
 #bms, #quickLinks {
     color: #888;
     font-size: 80%;
 }
+
 #bms a, #quickLinks a {
     color: #888;
 }
+
 #start {
     background: #70c111;
     color: #fff;
@@ -107,6 +129,7 @@ li {
     padding: 3px 8px;
     -moz-user-select: none;
 }
+
 #stop {
     background: #c00;
     color: #fff;
@@ -116,47 +139,61 @@ li {
     padding: 3px 8px;
     -moz-user-select: none;
 }
+
 #start.disabled {
     background: #b7d2aa;
     cursor: default;
 }
+
 #results {
     font-size: 110%;
     color: #999;
 }
+
 #started {
     display: none;
 }
+
 .running #started {
     display: block;
 }
+
 .running #stopped {
     display: none;
 }
+
 .running #tests h2 span {
     cursor: default;
 }
+
 .running .test {
     cursor: default;
 }
+
 .passed a, #header.passed {
     background: #81CF5A !important;
 }
+
 .failed a, #header.failed {
     background: #EF6868 !important;
 }
+
 .passing .touch {
     background: url(@{'/public/test-runner/running.gif'}) no-repeat;
 }
+
 .passing a {
     background: #95D7EF;
 }
+
 .passed .touch {
     color: #81CF5A !important;
 }
+
 .failed .touch {
     color: #EF6868 !important;
 }
+
 .touch {
     color: #bbb;
     padding: 2px 10px 2px 5px;
@@ -165,9 +202,11 @@ li {
     font-size: 110%;
     font-weight: bold;
 }
+
 .failed .touch, .passed .touch {
     cursor: pointer;
 }
+
 .testResult {
     display: none;
     background: #fff;
@@ -179,49 +218,62 @@ li {
     border-left: 6px solid #ccc;
     -moz-user-select: text !important;
 }
+
 .testResult .status_passed {
     background: #9BCF81 !important;
 }
+
 .testResult .status_failed {
     background: #EF8686 !important;
 }
+
 .testResult .status_done {
     background: #EFEFD1 !important;
 }
+
 .testResult table {
     width: 100%;
     border: none;
 }
+
 .testResult table td {
     padding: 5px;
     border: none;
 }
+
 .testResult .error {
     color: #c00;
 }
+
 .testResult .time {
     color: #999;
 }
+
 .testResult table .passed span {
     background: #9BCF81 !important;
     padding: 3px 5px;
 }
+
 .testResult table .failed span {
     background: #EF8686 !important;
     padding: 3px 5px;
 }
+
 .testResult table .source {
     margin-top: 10px;
 }
+
 .testResult table .source span {
     color: #fff;
     font-size: 85%;
     padding: 1px 3px;
     background: #666;
 }
+
 .testResult table pre {
     display: none;
 }
+
 .testResult table .sourceLine {
     border-left: 3px solid #c00;
     padding: 4px 3px;
@@ -229,6 +281,7 @@ li {
     font-size: 85%;
     margin-bottom: 10px;
 }
+
 #loading {
     background: #c00;
     color: #fff;
@@ -239,11 +292,13 @@ li {
     font-size: 80%;
     display: none;
 }
+
 .testResult a {
     background: white !important;
     font-weight: normal !important;
     padding: 0 !important;
 }
+
 #selenium-mask {
     background: #000;
     opacity: .8;
@@ -254,6 +309,7 @@ li {
     bottom: 0;
     display: none;
 }
+
 #selenium {
     position: fixed;
     top: 20px;
@@ -265,6 +321,7 @@ li {
     color: #fff;
     font-size: 110%;
 }
+
 #stopSelenium {
     background: #c00;
     color: #fff;
@@ -274,6 +331,7 @@ li {
     padding: 2px 8px;
     -moz-user-select: none;
 }
+
 #selenium iframe {
     margin-top: 10px;
     border: 1px solid #666;
@@ -286,10 +344,31 @@ li {
     <h1>
         Litmus Test Runner
     </h1>
+
     <p>
         <strong>Select the tests to run</strong>, then click [Start] and pray
     </p>
+
     <div id="loading">working ...</div>
+</div>
+
+<div id="results" class="block">
+    <div id="stopped">
+        <span id="start">Start !</span>
+        &nbsp;
+        <span class="nbToRun">no</span> test<span class="nbToRunPluralize"></span> to run </span>
+
+    </div>
+
+    <div id="started">
+        <span id="stop">Stop ...</span>
+        &nbsp;(running <span class="nbToRun">no</span> test<span class="nbToRunPluralize"></span>)
+    </div>
+
+    <div id="finished">
+
+    </div>
+
 </div>
 
 <div id="tests" class="block">
@@ -301,7 +380,9 @@ li {
             #{list items:tests.get(category), as:'test'}
                 <li>
                     <div class="test" id="${test.name}.class">
-                    ${test.name}
+                        <span class="touch">∼</span>
+                        <a href="#">${test.name}</a>
+
                     </div>
                 </li>
             #{/list}
