--- a/app/views/LitmusTestRunner/testList.html
+++ b/app/views/LitmusTestRunner/testList.html
@@ -3,334 +3,10 @@
 <head>
 <title>Play! - Litmus Test Runner</title>
 <meta http-equiv="Content-Type" content="text/html; charset=${_response_encoding}"/>
-<script src="@{'/public/test-runner/jquery-1.3.2.min.js'}" type="text/javascript"
-        charset="${_response_encoding}"></script>
-<script src="@{'/public/test-runner/jquery.scrollTo-min.js'}" type="text/javascript"
-        charset="${_response_encoding}"></script>
-<style type="text/css">
-html, body {
-    margin: 0;
-    padding: 0;
-    font-family: Helvetica, Arial, Sans, serif;
-    background: #EEEEEE;
-    -moz-user-select: none;
-}
+<script src="@{'/public/test-runner/jquery-1.3.2.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+<script src="@{'/public/test-runner/jquery.scrollTo-min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
 
-a {
-    outline: none;
-}
-
-.block {
-    padding: 20px;
-    border-bottom: 1px solid #aaa;
-}
-
-#header {
-    position: fixed;
-    height: 60px;
-    width: 100%;
-    background: #008b8b;
-}
-
-#header h1 {
-    font-weight: normal;
-    font-size: 28px;
-    margin: 0;
-}
-
-#header p {
-    color: #333;
-}
-
-#results {
-    background: #f6f6f6;
-    position: fixed;
-    height: 20px;
-    width: 100%;
-    top: 100px;
-}
-
-label {
-    font-weight: bold;
-    display: block;
-}
-
-small {
-    color: #888;
-    font-size: 80%;
-    position: relative;
-    top: -3px;
-}
-
-#tests {
-    padding-top: 12em;
-}
-
-#tests h2 {
-    color: #333;
-    font-weight: normal;
-    border-left: 4px solid #ccc;
-    padding-left: 5px;
-    -moz-user-select: none;
-}
-
-#tests h2 span {
-    cursor: pointer;
-}
-
-ul {
-    list-style: none;
-    margin-bottom: 40px;
-    padding-left: 20px;
-}
-
-li {
-    padding: 2px;
-    margin-bottom: 4px;
-}
-
-.test a {
-    background: #fafafa;
-    padding: 3px 6px;
-    color: #666;
-    font-weight: bold;
-    text-decoration: none;
-    cursor: pointer;
-    -moz-user-select: none;
-}
-
-.selected a {
-    background: #fff2ab;
-    color: #333;
-}
-
-#bms, #quickLinks {
-    color: #888;
-    font-size: 80%;
-}
-
-#bms a, #quickLinks a {
-    color: #888;
-}
-
-#start {
-    background: #70c111;
-    color: #fff;
-    font-size: 120%;
-    border: 1px double #70c111;
-    cursor: pointer;
-    padding: 3px 8px;
-    -moz-user-select: none;
-}
-
-#stop {
-    background: #c00;
-    color: #fff;
-    font-size: 120%;
-    border: 1px double #c00;
-    cursor: pointer;
-    padding: 3px 8px;
-    -moz-user-select: none;
-}
-
-#start.disabled {
-    background: #b7d2aa;
-    cursor: default;
-}
-
-#results {
-    font-size: 110%;
-    color: #999;
-}
-
-#started {
-    display: none;
-}
-
-.running #started {
-    display: block;
-}
-
-.running #stopped {
-    display: none;
-}
-
-.running #tests h2 span {
-    cursor: default;
-}
-
-.running .test {
-    cursor: default;
-}
-
-.passed a, #header.passed {
-    background: #81CF5A !important;
-}
-
-.failed a, #header.failed {
-    background: #EF6868 !important;
-}
-
-.passing .touch {
-    background: url(@{'/public/test-runner/running.gif'}) no-repeat;
-}
-
-.passing a {
-    background: #95D7EF;
-}
-
-.passed .touch {
-    color: #81CF5A !important;
-}
-
-.failed .touch {
-    color: #EF6868 !important;
-}
-
-.touch {
-    color: #bbb;
-    padding: 2px 10px 2px 5px;
-    cursor: default;
-    font-family: monospace;
-    font-size: 110%;
-    font-weight: bold;
-}
-
-.failed .touch, .passed .touch {
-    cursor: pointer;
-}
-
-.testResult {
-    display: none;
-    background: #fff;
-    margin-left: 24px;
-    margin-top: 6px;
-    margin-bottom: 10px;
-    padding: 8px;
-    font-size: 80%;
-    border-left: 6px solid #ccc;
-    -moz-user-select: text !important;
-}
-
-.testResult .status_passed {
-    background: #9BCF81 !important;
-}
-
-.testResult .status_failed {
-    background: #EF8686 !important;
-}
-
-.testResult .status_done {
-    background: #EFEFD1 !important;
-}
-
-.testResult table {
-    width: 100%;
-    border: none;
-}
-
-.testResult table td {
-    padding: 5px;
-    border: none;
-}
-
-.testResult .error {
-    color: #c00;
-}
-
-.testResult .time {
-    color: #999;
-}
-
-.testResult table .passed span {
-    background: #9BCF81 !important;
-    padding: 3px 5px;
-}
-
-.testResult table .failed span {
-    background: #EF8686 !important;
-    padding: 3px 5px;
-}
-
-.testResult table .source {
-    margin-top: 10px;
-}
-
-.testResult table .source span {
-    color: #fff;
-    font-size: 85%;
-    padding: 1px 3px;
-    background: #666;
-}
-
-.testResult table pre {
-    display: none;
-}
-
-.testResult table .sourceLine {
-    border-left: 3px solid #c00;
-    padding: 4px 3px;
-    color: #000;
-    font-size: 85%;
-    margin-bottom: 10px;
-}
-
-#loading {
-    background: #c00;
-    color: #fff;
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding: 4px 5px;
-    font-size: 80%;
-    display: none;
-}
-
-.testResult a {
-    background: white !important;
-    font-weight: normal !important;
-    padding: 0 !important;
-}
-
-#selenium-mask {
-    background: #000;
-    opacity: .8;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: none;
-}
-
-#selenium {
-    position: fixed;
-    top: 20px;
-    bottom: 50px;
-    right: 20px;
-    left: 20px;
-    display: none;
-    z-index: 100000;
-    color: #fff;
-    font-size: 110%;
-}
-
-#stopSelenium {
-    background: #c00;
-    color: #fff;
-    font-size: 90%;
-    border: 1px double #c00;
-    cursor: pointer;
-    padding: 2px 8px;
-    -moz-user-select: none;
-}
-
-#selenium iframe {
-    margin-top: 10px;
-    border: 1px solid #666;
-    background: #fff;
-}
-</style>
+<link rel="stylesheet" href="@{'/public/litmus/css/style.css'}" type="text/css" />
 
 <script type="text/javascript">
 $(function () {
@@ -338,8 +14,8 @@ $(function () {
     $('#loading').ajaxStart(function () {
         $(this).show();
     }).ajaxStop(function () {
-                $(this).hide();
-            });
+        $(this).hide();
+    });
 
     var testError = function (msg) {
         window.location = bookmark();
@@ -375,9 +51,7 @@ $(function () {
         }
     }
 
-    var result = function () {
-        $('#selenium-mask, #selenium').hide();
-        $('#selenium-runner').attr('src', 'about:blank');
+    var result = function () {        
         clearInterval(window.checkResult);
         $(document.body).removeClass('running');
         $('.passing').removeClass('passing');
@@ -408,7 +82,7 @@ $(function () {
                 dataType:'html',
                 url:'@{TestRunner.run("XXX")}'.replace('XXX', testId),
                 complete:function (res, status) {
-                    var results = jQuery("<div/>").append(res.responseText).find('table');
+                    var results = $("<div/>").append(res.responseText).find('table');
                     if (!results || !results.size()) {
                         results = '<strong class="error">Error, the test has not been properly run. Check the server logs, or open this test in another browser tab to see the error page.</strong>';
                     }
@@ -417,38 +91,8 @@ $(function () {
                     } else {
                         testFail(test, results);
                     }
-                    ;
                 }
             });
-        }
-        if (/.test.html/.test(testId)) {
-            %{
-                protocol = "http";
-                port = 9000;
-                if (play.configuration['https.port'] != null) {
-                    port = play.configuration['https.port'];
-                    protocol = "https";
-                } else if (play.configuration['http.port'] != null) {
-                    port = play.configuration['http.port'];
-                }
-            }%
-            $('#selenium-runner').attr('src', '@{'/public/test-runner/selenium/TestRunner.html'}?baseUrl=${protocol}://localhost:${port}&test=/@tests/' + testId + '.suite&auto=true&close=true&resultsUrl=/@tests/' + testId);
-            $('#selenium-mask, #selenium').show();
-            window.checkResult = setInterval(function () {
-                var req = $.ajax({url:'@{TestRunner.run("XXX.result")}'.replace('XXX', testId), async:false});
-                if (req.status == 200) {
-                    var results = jQuery("<div/>").append(req.responseText).find('table');
-                    clearInterval(window.checkResult);
-                    $('#selenium-mask, #selenium').hide();
-                    testSuccess(test, results);
-                }
-                if (req.status == 500) {
-                    var results = jQuery("<div/>").append(req.responseText).find('table');
-                    clearInterval(window.checkResult);
-                    $('#selenium-mask, #selenium').hide();
-                    testFail(test, results);
-                }
-            }, 2000);
         }
     };
 
@@ -524,9 +168,9 @@ $(function () {
         }
     });
 
-    $('#tests h2 span').click(function () {
-        if ($(document.body).is('.running')) return;
-        var ul = $(this).parent().next('ul');
+    $('#tests h2').click(function () {        
+        if ($(document.body).is('.running')) return;        
+        var ul = $(this).parent().find('ul');
         if ($('.test', ul).size() == $('.test.selected', ul).size()) {
             $('.test', ul).removeClass('selected');
         } else {
@@ -542,12 +186,26 @@ $(function () {
 
     $('#stop').click(function () {
         stop();
+    });  
+
+    $('#selectAllLink').click(function () {
+        $('.test').addClass('selected');
+        updateSelected();
     });
 
-    $('#stopSelenium').click(function () {
-        stop();
+    $('#unselectAll').click(function (e) {
+        e.preventDefault();
+        $('.test').removeClass('selected');
+        updateSelected();
     });
 
+    $('#runAllLink').click(function () {
+        $('.test').addClass('selected');
+        updateSelected();
+        run();
+    });
+    
+    
     if (/select=/.exec(document.location.search)) {
         var toSelect = /select=([^&]+)/.exec(document.location.search)[1].split(',');
         if (toSelect[0] == 'all') {
@@ -559,24 +217,8 @@ $(function () {
         }
     }
 
-    $('#sa').click(function () {
-        $('.test').addClass('selected');
-        updateSelected();
-    });
-
-    $('#unselectAll').click(function (e) {
-        e.preventDefault();
-        $('.test').removeClass('selected');
-        updateSelected();
-    });
-
-    $('#ra').click(function () {
-        $('.test').addClass('selected');
-        updateSelected();
-        run();
-    });
-
     updateSelected();
+
 
     if (/auto=yes/.exec(document.location.search)) {
         run();
@@ -625,8 +267,8 @@ function toggle_trace(link) {
         all</a></span></span>
 
                 <span id="quickLinks">
-                    <span id="sa">(<a id="" href="#">Select all</a></span> -
-                    <span id="ra"><a id="" href="#">Run all</a>)</span>
+                    <span id="selectAllLink">(<a id="" href="#">Select all</a></span> -
+                    <span id="runAllLink"><a id="" href="#">Run all</a>)</span>
                 </span>
     </div>
 
@@ -645,24 +287,25 @@ function toggle_trace(link) {
 
 #{if tests}
     #{list items:tests.getCategories(), as: 'category'}
-        <h2>${category}</h2>
-        <ul>
-            #{list items:tests.get(category), as:'test'}
-                <li>
-                    <div class="test" id="${test.name}.class">
-                        <span class="touch">∼</span>
-                        <a class="testLink" href="#" data-name="${test.name}">${test.name}</a>
-
-                        <div class="testResult"></div>
-                    </div>
-                </li>
-            #{/list}
-        </ul>
+        <div>
+            <h2>${category}</h2>
+            <ul>
+                #{list items:tests.get(category), as:'test'}
+                    <li>
+                        <div class="test" id="${test.name}.class">
+                            <span class="touch">+</span>
+                            <a class="testLink" href="#" data-name="${test.name}">${test.name}</a>
+                            <div class="testResult"></div>
+                        </div>
+                    </li>
+                #{/list}
+            </ul>
+        </div>
     #{/list}
 #{/if}
 
 #{if !tests}
-    <h2><span>There is no test to run</span></h2>
+    <h2><span>There are no test to run</span></h2>
 #{/if}
 
 </div>
