copied some more from original TestRunner (+ removed selenium parts)

--- a/public/litmus/style.css
+++ b/public/litmus/style.css
@@ -159,7 +159,7 @@ li {
 }
 
 .passing .touch {
-    background: url(@{'/public/test-runner/running.gif'}) no-repeat;
+    background: url(running.gif) no-repeat;
 }
 
 .passing a {
