--- a/app/views/LitmusTestRunner/testList.html
+++ b/app/views/LitmusTestRunner/testList.html
@@ -3,10 +3,9 @@
 <head>
 <title>Play! - Litmus Test Runner</title>
 <meta http-equiv="Content-Type" content="text/html; charset=${_response_encoding}"/>
-<script src="@{'/public/test-runner/jquery-1.3.2.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
-<script src="@{'/public/test-runner/jquery.scrollTo-min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
-
-<link rel="stylesheet" href="@{'/public/litmus/css/style.css'}" type="text/css" />
+<script src="@{'/public/litmus/jquery-1.3.2.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+<script src="@{'/public/litmus/jquery.scrollTo-min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
+<link rel="stylesheet" href="@{'/public/litmus/style.css'}" type="text/css" />
 
 <script type="text/javascript">
 $(function () {
@@ -29,7 +28,7 @@ $(function () {
         $('.test, #header').removeClass('passed').removeClass('failed');
         $.ajax({
             type:'GET',
-            url:'@{TestRunner.run("init")}',
+            url:'@{LitmusTestRunner.run("init")}',
             success:function () {
                 runNextTest();
             },
@@ -63,7 +62,7 @@ $(function () {
         var areFailedTests = $('.test.failed').size();
         $.ajax({
             type:'GET',
-            url:'@{TestRunner.run("end")}',
+            url:'@{LitmusTestRunner.run("end")}',
             data:{result:areFailedTests ? 'failed' : 'passed'}
         });
         if (areFailedTests) {
@@ -80,7 +79,7 @@ $(function () {
             $.ajax({
                 type:'GET',
                 dataType:'html',
-                url:'@{TestRunner.run("XXX")}'.replace('XXX', testId),
+                url:'@{LitmusTestRunner.run("XXX")}'.replace('XXX', testId),
                 complete:function (res, status) {
                     var results = $("<div/>").append(res.responseText).find('table');
                     if (!results || !results.size()) {
@@ -173,8 +172,10 @@ $(function () {
         var ul = $(this).parent().find('ul');
         if ($('.test', ul).size() == $('.test.selected', ul).size()) {
             $('.test', ul).removeClass('selected');
+            $(this).removeClass('selected');
         } else {
             $('.test', ul).addClass('selected');
+            $(this).addClass('selected');
         }
         updateSelected();
     });
