--- a/app/views/LitmusTestRunner/testList.html
+++ b/app/views/LitmusTestRunner/testList.html
@@ -248,14 +248,8 @@ function toggle_trace(link) {
 <body>
 
 <div id="header" class="block">
-    <h1>
-        Litmus Test Runner
-    </h1>
-
-    <p>
-        <strong>Select the tests to run</strong>, then click [Start] and pray
-    </p>
-
+    <h1>Litmus Test Runner</h1>
+    <p> Select the tests or categories to run, then click [Start] and pray </p>
     <div id="loading">working ...</div>
 </div>
 
