--- a/app/views/LitmusTestRunner/testList.html
+++ b/app/views/LitmusTestRunner/testList.html
@@ -4,7 +4,6 @@
 <title>Play! - Litmus Test Runner</title>
 <meta http-equiv="Content-Type" content="text/html; charset=${_response_encoding}"/>
 <script src="@{'/public/litmus/jquery-1.3.2.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
-<script src="@{'/public/litmus/jquery.scrollTo-min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
 <link rel="stylesheet" href="@{'/public/litmus/style.css'}" type="text/css" />
 
 <script type="text/javascript">
@@ -69,7 +68,6 @@ $(function () {
         if (areFailedTests) {
             var skip = $("#header").outerHeight();
             skip += $("#results").outerHeight();
-            $.scrollTo($('.test.failed').offset().top - skip, 500);
         }
     };
 
@@ -107,7 +105,7 @@ $(function () {
         test.removeClass('passing').addClass('failed');
         $('.touch', test).html('-');
         $('.testResult', test).html(result).show();
-        stop();
+        runNextTest();
     };
 
     var stop = function () {
@@ -294,6 +292,15 @@ function toggle_trace(link) {
                             <span class="touch">+</span>
                             <a class="testLink" href="#" data-name="${testClass.name}">${testClass.name}</a>
                             <div class="testResult"></div>
+                            <!--
+                            <div>
+                                <ul>
+                                    #{list items:testClass.testMethodNames, as: 'testMethod'}
+                                        <li>${testMethod}</li>
+                                    #{/list}
+                                </ul>
+                            </div>
+                            -->
                         </div>
                     </li>
                 #{/list}
