layout fix: single test run now selects the test

--- a/app/views/LitmusTestRunner/testList.html
+++ b/app/views/LitmusTestRunner/testList.html
@@ -202,8 +202,8 @@ $(function () {
     $('.runSingleTestClass').click(function(){
         var test = $(this).closest('.test');
         var testId = test.attr('id');
+        test.addClass('selected');
         runTest(testId, test);
-        updateSelected();
     });
 
 
